--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@
 		<title>Backbone.js Web App</title>
 		<link rel="stylesheet" href="css/screen.css" />
 	</head>
+	<body>
+		<div id="contacts"></div>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/underscore-min.js"></script>
+		<script src="js/backbone-min.js"></script>
+	</body>
 </html>
