Micro Templating with Underscore

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 	</head>
 	<body>
 		<div id="contacts"></div>
+		<script id="contactTemplate" type="text/template">
+			<img src="<%= photo %>" alt="<%= name %>"/>
+			<h1><%= name %><span><%= type %></span></h1>
+			<div><%= address %></dv>
+			<dl>
+				<dt>Tel:</dt><dd><%= tel %></dd>
+				<dt>Email:</dt><dd><a href="mailto:<%= email %>"></a></dd>
+			</dl>
+		</script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/underscore-min.js"></script>
 		<script src="js/backbone-min.js"></script>
