--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -8,12 +9,12 @@
 	<body>
 		<div id="contacts"></div>
 		<script id="contactTemplate" type="text/template">
-			<img src="<%= photo %>" alt="<%= name %>"/>
+			<img src="<%= photo %>" alt="<%= name %>" />
 			<h1><%= name %><span><%= type %></span></h1>
-			<div><%= address %></dv>
+			<div><%= address %></div>
 			<dl>
 				<dt>Tel:</dt><dd><%= tel %></dd>
-				<dt>Email:</dt><dd><a href="mailto:<%= email %>"></a></dd>
+				<dt>Email:</dt><dd><a href="mailto:<%= email %>"><%= email %></a></dd>
 			</dl>
 		</script>
 		<script src="js/jquery.min.js"></script>
