Deleting Models From the Collection

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<dt>Tel:</dt><dd><%= tel %></dd>
 				<dt>Email:</dt><dd><a href="mailto:<%= email %>"><%= email %></a></dd>
 			</dl>
+			<button class="delete">Delete</button>
 		</script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/underscore-min.js"></script>
