Doing Something With the Form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	</head>
 	<body>
 		<div id="contacts">
-			<header><div id="filter"><label>Show me:</label></div></header>
+			<header>
+				<div id="filter"><label>Show me:</label></div>
+				<a id="showForm" href="#">Add new contact</a>
+			</header>
 			<form id="addContact" action="#">
 			    <label for="photo">photo:</label><input id="photo" type="file" />
 			    <label for="type">Type:</label><input id="type" />
